--- a/views/pages/records.ejs
+++ b/views/pages/records.ejs
@@ -17,18 +17,10 @@
     <!-- Our Custom CSS -->
     <link rel="stylesheet" href="/css/records.css" />
     <!-- Scrollbar Custom CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css" />
 
     <!-- Font Awesome JS -->
-    <script
-      defer
-      src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js"
-      integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ"
-      crossorigin="anonymous"
-    ></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
     <script
       defer
       src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js"
@@ -92,50 +84,17 @@
         <div class="col-lg-9 mx-auto">
           <!-- Timeline -->
           <ul class="timeline">
+            <%Object.keys(records).map((disease) => {%>
             <li class="timeline-item bg-white rounded ml-3 p-4 shadow">
               <div class="timeline-arrow"></div>
-              <h2 class="h5 mb-0">Title of section 1</h2>
+              <h2 class="h5 mb-0">disease.name</h2>
               <span class="small text-gray"><i class="fa fa-clock-o mr-1"></i>21 March, 2019</span>
               <p class="text-small mt-2 font-weight-light">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non nisi semper, et
-                elementum lorem ornare. Maecenas placerat facilisis mollis. Duis sagittis ligula in sodales vehicula....
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non nisi semper, et elementum lorem ornare. Maecenas placerat facilisis mollis. Duis sagittis ligula
+                in sodales vehicula....
               </p>
             </li>
-            <li class="timeline-item bg-white rounded ml-3 p-4 shadow">
-              <div class="timeline-arrow"></div>
-              <h2 class="h5 mb-0">Title of section 2</h2>
-              <span class="small text-gray"><i class="fa fa-clock-o mr-1"></i>5 April, 2019</span>
-              <p class="text-small mt-2 font-weight-light">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non nisi semper.
-              </p>
-              <p class="text-small mt-2 font-weight-light">
-                Libero expedita explicabo eius fugiat quia aspernatur autem laudantium error architecto recusandae natus
-                sapiente sit nam eaque, consectetur porro molestiae ipsam! Deleniti.
-              </p>
-            </li>
-            <li class="timeline-item bg-white rounded ml-3 p-4 shadow">
-              <div class="timeline-arrow"></div>
-              <h2 class="h5 mb-0">Title of section 3</h2>
-              <span class="small text-gray"><i class="fa fa-clock-o mr-1"></i>18 August, 2019</span>
-              <p class="text-small mt-2 font-weight-light">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non nisi semper, et
-                elementum lorem ornare. Maecenas placerat facilisis mollis. Duis sagittis ligula in sodales vehicula....
-              </p>
-            </li>
-            <li class="timeline-item bg-white rounded ml-3 p-4 shadow">
-              <div class="timeline-arrow"></div>
-              <h2 class="h5 mb-0">Title of section 4</h2>
-              <span class="small text-gray"><i class="fa fa-clock-o mr-1"></i>10 October, 2019</span>
-              <p class="text-small mt-2 font-weight-light">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non nisi semper, et
-                elementum lorem ornare. Maecenas placerat facilisis mollis. Duis sagittis ligula in sodales vehicula....
-              </p>
-              <p class="text-small mt-2 font-weight-light">
-                Voluptatibus temporibus esse illum eum aspernatur, fugiat suscipit natus! Eum corporis illum nihil
-                officiis tempore. Excepturi illo natus libero sit doloremque, laborum molestias rerum pariatur quam
-                ipsam necessitatibus incidunt, explicabo.
-              </p>
-            </li>
+            <%})%>
           </ul>
           <!-- End -->
         </div>
@@ -143,11 +102,7 @@
     </div>
 
     <!-- jQuery CDN - Slim version (=without AJAX) -->
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <!-- Popper.JS -->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"
