--- a/views/pages/treatment.ejs
+++ b/views/pages/treatment.ejs
@@ -40,34 +40,7 @@
   <body>
     <div class="wrapper">
       <!-- Sidebar  -->
-      <nav id="sidebar">
-        <div class="sidebar-header">
-          <h3>Elixicor</h3>
-        </div>
-
-        <ul class="list-unstyled components">
-          <li>
-            <a href="/main">&nbsp; Records</a>
-          </li>
-          <!-- <li>
-            <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">&nbsp; Pages</a>
-            <ul class="collapse list-unstyled" id="pageSubmenu">
-              <li>
-                <a href="#">Page 1</a>
-              </li>
-              <li>
-                <a href="#">Page 2</a>
-              </li>
-              <li>
-                <a href="#">Page 3</a>
-              </li>
-            </ul>
-          </li> -->
-          <li class="active">
-            <a href="#">&nbsp; Treatment</a>
-          </li>
-        </ul>
-      </nav>
+      <%- include('../partials/sidebar.ejs',{para1:'', para2:'active',para3:''})%>
 
       <!-- Page Content  -->
       <div id="content">
