--- a/views/pages/todo.ejs
+++ b/views/pages/todo.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Elixicor | Profile</title>
+    <title>Elixicor | Catalog</title>
 
     <!-- Bootstrap CSS CDN -->
     <link
@@ -18,10 +18,18 @@
     <link rel="stylesheet" href="/css/patient_list.css" />
     <link rel="stylesheet" href="/css/todo.css" />
     <!-- Scrollbar Custom CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css"
+    />
 
     <!-- Font Awesome JS -->
-    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
+    <script
+      defer
+      src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js"
+      integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ"
+      crossorigin="anonymous"
+    ></script>
     <script
       defer
       src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js"
@@ -48,7 +56,7 @@
             <a href="/patient/<%=uniqueID%>/profile">&nbsp; Profile</a>
           </li>
           <li class="active">
-            <a href="/patient/<%=uniqueID%>/profile">&nbsp; Check List</a>
+            <a href="/patient/<%=uniqueID%>/profile">&nbsp; Catalog</a>
           </li>
         </ul>
       </nav>
@@ -66,7 +74,7 @@
         </nav>
 
         <div class="container">
-          <h2>Realtime Status</h2>
+          <h2>Synchronal Catalog</h2>
           <div class="container mt-5">
             <div class="d-flex justify-content-center row">
               <div class="col-md-6">
@@ -81,19 +89,39 @@
                 </div>
                 <div class="p-3 bg-white">
                   <div class="d-flex align-items-center"
-                    ><label><input type="checkbox" name="option" class="option-input radio" /><span class="label-text">Task list and assignments</span></label></div
+                    ><label
+                      ><input type="checkbox" name="option" class="option-input radio" /><span class="label-text"
+                        >Task list and assignments</span
+                      ></label
+                    ></div
                   >
                   <div class="d-flex align-items-center"
-                    ><label><input type="checkbox" name="option" class="option-input radio" /><span class="label-text">Set due date and assignments</span></label></div
+                    ><label
+                      ><input type="checkbox" name="option" class="option-input radio" /><span class="label-text"
+                        >Set due date and assignments</span
+                      ></label
+                    ></div
                   >
                   <div class="d-flex align-items-center"
-                    ><label><input type="checkbox" name="option" class="option-input radio" /><span class="label-text">Remove duplicate tasks and stories</span></label></div
+                    ><label
+                      ><input type="checkbox" name="option" class="option-input radio" /><span class="label-text"
+                        >Remove duplicate tasks and stories</span
+                      ></label
+                    ></div
                   >
                   <div class="d-flex align-items-center"
-                    ><label><input type="checkbox" name="option" class="option-input radio" /><span class="label-text">Update the userflow and stories</span></label></div
+                    ><label
+                      ><input type="checkbox" name="option" class="option-input radio" /><span class="label-text"
+                        >Update the userflow and stories</span
+                      ></label
+                    ></div
                   >
                   <div class="d-flex align-items-center"
-                    ><label><input type="checkbox" class="option-input radio" /><span class="label-text">Adjust the components</span></label></div
+                    ><label
+                      ><input type="checkbox" class="option-input radio" /><span class="label-text"
+                        >Adjust the components</span
+                      ></label
+                    ></div
                   >
                 </div>
                 <!-- <div class="p-2 bg-white">
@@ -109,6 +137,58 @@
                     width="40"
                 /></div> -->
               </div>
+            </div>
+          </div>
+          <div class="container mt-5 pt-5">
+            <h3>Updated Bill</h3>
+            <div class="col-lg-12 p-5 bg-white rounded shadow-sm mb-5">
+              <!-- Shopping cart table -->
+              <div class="table-responsive">
+                <table class="table">
+                  <thead>
+                    <tr>
+                      <th scope="col" class="border-0 bg-light">
+                        <div class="p-2 px-3 text-uppercase">Day</div>
+                      </th>
+                      <th scope="col" class="border-0 bg-light">
+                        <div class="py-2 text-uppercase">Bill</div>
+                      </th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <th scope="row" class="border-0">
+                        <div class="p-2">
+                          <div class="ml-3 d-inline-block align-middle">
+                            <h5 class="mb-0"> <a href="#" class="text-dark d-inline-block align-middle">Day 1</a></h5>
+                          </div>
+                        </div>
+                      </th>
+                      <td class="border-0 align-middle"><strong>Rs 10,000/-</strong></td>
+                    </tr>
+                    <tr>
+                      <th scope="row">
+                        <div class="p-2">
+                          <div class="ml-3 d-inline-block align-middle">
+                            <h5 class="mb-0"><a href="#" class="text-dark d-inline-block">Day 2</a></h5>
+                          </div>
+                        </div>
+                      </th>
+                      <td class="align-middle"><strong>Rs 30,000/-</strong></td>
+                    </tr>
+                    <tr>
+                      <th scope="row">
+                        <div class="p-2">
+                          <div class="ml-3 d-inline-block align-middle">
+                            <h5 class="mb-0"> <a href="#" class="text-dark d-inline-block">Day 3</a></h5>
+                          </div>
+                        </div> </th
+                      ><td class="align-middle"><strong>Rs 50,000/-</strong></td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+              <!-- End -->
             </div>
           </div>
         </div>
